<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobileappscompany.training.debug1.MainActivity">



    <EditText
        android:id="@+id/eTN1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/eTN2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/eTN1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        android:text="+"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTN2"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnSubstract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:onClick="onClick"
        android:text="-"
        android:elevation="300dp"
        app:layout_constraintLeft_toRightOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="@+id/btnAdd"/>

    <Button
        android:id="@+id/btnMuliply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:onClick="onClick"
        android:text="*"
        app:layout_constraintLeft_toRightOf="@+id/btnSubstract"
        app:layout_constraintTop_toTopOf="@+id/btnAdd"/>

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:onClick="onClick"
        android:text="/"
        app:layout_constraintLeft_toRightOf="@+id/btnMuliply"
        app:layout_constraintTop_toTopOf="@+id/btnAdd"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="26dp"
        android:gravity="center_horizontal"
        android:text="0"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"/>
</android.support.constraint.ConstraintLayout>
